First try for new model

--- a/model/index.html
+++ b/model/index.html
@@ -1,18 +1,34 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="nl"><html lang="nl">
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-	<title>BP4mc2 - Model</title>
-	<link rel="stylesheet" type="text/css" href="../stylesheet.css"/>
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Nederlands profiel voor gegevenscatalogi</title>
+    <script src="//www.w3.org/Tools/respec/respec-w3c-common" async="async" class="remove"></script>
+    <script class="remove">
+      var respecConfig = {
+        specStatus: "ED",
+        editors: [{
+          name: "Arjen Santema",
+          url: "http://your-site.com",
+        }],
+        processVersion: 2018,
+        edDraftURI: "http://github.com/bp4mc2",
+        shortName: "bp4mc2"
+      };
+    </script>
 </head>
-<body>
-<h1><img class="logo" src="../bp4mc2.png" alt="bp4mc2"/>Best Practices for meaningful connected computing</h1>
-<h2>Model voor een catalogus</h2>
-<hr/>
-<p>Onderstaand figuur geeft een grafische weergave van het model van de catalogus.</p>
-<p>Het model is ook als gestructureerde data beschikbaar: <a href="catalogusmodel.ttl">catalogusmodel.ttl</a></p>
-<p>Tenslotte is een PDF beschikbaar met een tekstuele beschrijving: <a href="catalogusmodel.pdf">catalogusmodel.pdf</a></p>
-<p>
-  <div width="100%">
-    <a href="catalogusmodel.png"><img width="100%" src="catalogusmodel.png" alt="catalogusmodel"/></a>
-  </div>
-</p>
+  <body>
+    <section id="abstract">
+      <p>
+        Dit document beschrijft de best-practice voor een Nederlands profiel voor gegevenscatalogi
+      </p>
+    </section>
+    <section id="sotd">
+      <p>
+      </p>
+    </section>
+   <section data-format="markdown" data-include="skos-ap-sc.md"></section>
+  </body>
+</html></html>
