--- a/model/index.html
+++ b/model/index.html
@@ -5,7 +5,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Nederlands profiel voor gegevenscatalogi</title>
-    <script src="//www.w3.org/Tools/respec/respec-w3c-common" async="async" class="remove"></script>
+    <script src="https://www.w3.org/Tools/respec/respec-w3c-common" async="async" class="remove"></script>
     <script class="remove">
       var respecConfig = {
         specStatus: "ED",
