Added toplevel and dcat

--- a/model/index.html
+++ b/model/index.html
@@ -29,6 +29,8 @@
       <p>
       </p>
     </section>
-   <section data-format="markdown" data-include="skos-ap-sc.md"></section>
+    <section data-format="markdown" data-include="topmodel.md"></section>
+    <section data-format="markdown" data-include="skos-ap-sc.md"></section>
+    <section data-format="markdown" data-include="dcat-ap-sc.md"></section>
   </body>
 </html></html>
