--- a/model/index.html
+++ b/model/index.html
@@ -31,6 +31,7 @@
     </section>
     <section data-format="markdown" data-include="topmodel.md"></section>
     <section data-format="markdown" data-include="skos-ap-sc.md"></section>
+    <section data-format="markdown" data-include="frbr-ap-sc.md"></section>
     <section data-format="markdown" data-include="skoslex-ap-sc.md"></section>
     <section data-format="markdown" data-include="dcat-ap-sc.md"></section>
   </body>
