--- a/model/index.html
+++ b/model/index.html
@@ -34,5 +34,8 @@
     <section data-format="markdown" data-include="frbr-ap-sc.md"></section>
     <section data-format="markdown" data-include="skoslex-ap-sc.md"></section>
     <section data-format="markdown" data-include="dcat-ap-sc.md"></section>
+    <section data-format="markdown" data-include="dqv-ap-sc.md"></section>
+    <section data-format="markdown" data-include="adms-ap-sc.md"></section>
+    <section data-format="markdown" data-include="cv-ap-sc.md"></section>
   </body>
 </html></html>
