--- a/model/index.html
+++ b/model/index.html
@@ -36,6 +36,8 @@
     <section data-format="markdown" data-include="dcat-ap-sc.md"></section>
     <section data-format="markdown" data-include="dqv-ap-sc.md"></section>
     <section data-format="markdown" data-include="adms-ap-sc.md"></section>
+    <section data-format="markdown" data-include="dm-ap-sc.md"></section>
     <section data-format="markdown" data-include="cv-ap-sc.md"></section>
+    <section data-format="markdown" data-include="prov-ap-sc.md"></section>
   </body>
 </html></html>
