--- a/model/index.html
+++ b/model/index.html
@@ -14,7 +14,7 @@
           url: "http://your-site.com",
         }],
         processVersion: 2018,
-        edDraftURI: "http://github.com/bp4mc2",
+        edDraftURI: "http://bp4mc2.org/model",
         shortName: "bp4mc2"
       };
     </script>
