Added editors and correct versions

--- a/model/index.html
+++ b/model/index.html
@@ -11,7 +11,10 @@
         specStatus: "ED",
         editors: [{
           name: "Arjen Santema",
-          url: "http://your-site.com",
+          url: "http://www.kadaster.nl",
+        },{
+          name: "Marco Brattinga",
+          url: "http://www.architolk.nl"
         }],
         processVersion: 2018,
         edDraftURI: "http://bp4mc2.org/model",
