--- a/model/en/index.html
+++ b/model/en/index.html
@@ -11,10 +11,13 @@
         specStatus: "ED",
         editors: [{
           name: "Arjen Santema",
-          url: "http://your-site.com",
+          url: "http://www.kadaster.nl",
+        },{
+          name: "Marco Brattinga",
+          url: "http://www.architolk.nl"
         }],
         processVersion: 2018,
-        edDraftURI: "http://github.com/bp4mc2",
+        edDraftURI: "http://bp4mc2.org/model",
         shortName: "bp4mc2"
       };
     </script>
@@ -22,7 +25,7 @@
   <body>
     <section id="abstract">
       <p>
-        Dit document beschrijft de best-practice voor een Nederlands profiel voor gegevenscatalogi
+        This document describes the best-practice for the Dutch profile for data catalogues
       </p>
     </section>
     <section id="sotd">
