--- a/draft/index.html
+++ b/draft/index.html
@@ -23,12 +23,7 @@
     </script>
 </head>
   <body>
-    <section id="abstract">
-      <p>
-        Dit document beschrijft de best-practice voor betekenisvolle informatie-uitwisseling.
-      </p>
-    </section>
-    <section data-format="markdown" data-include="chapter-0.md"></section>
+    <section id="abstract" data-format="markdown" data-include="chapter-0.md"></section>
     <section data-format="markdown" data-include="chapter-1.md"></section>
     <section data-format="markdown" data-include="chapter-2.md"></section>
     <section data-format="markdown" data-include="chapter-3.md"></section>
