Fixed some respec issues

--- a/draft/index.html
+++ b/draft/index.html
@@ -5,9 +5,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Best Practices for meaningful connected computing</title>
+    <script src="localbiblio.js" class="remove"></script>
     <script src="respec-bp4mc2.js" async="async" class="remove"></script>
     <script class="remove">
       var respecConfig = {
+        localBiblio: localBiblio,
         specStatus: "ED",
         editors: [{
           name: "Arjen Santema",
@@ -23,12 +25,12 @@
     </script>
 </head>
   <body>
-    <section id="abstract" data-format="markdown" data-include="chapter-0.md"></section>
-    <section data-format="markdown" data-include="chapter-1.md"></section>
-    <section data-format="markdown" data-include="chapter-2.md"></section>
-    <section data-format="markdown" data-include="chapter-3.md"></section>
-    <section data-format="markdown" data-include="chapter-4.md"></section>
-    <section data-format="markdown" data-include="chapter-5.md"></section>
-    <section data-format="markdown" data-include="chapter-6.md"></section>
+    <section id="abstract" data-format="markdown" data-include-format="text" data-include="chapter-0.md"></section>
+    <section data-format="markdown" data-include-format="text" data-include="chapter-1.md"></section>
+    <section data-format="markdown" data-include-format="text" data-include="chapter-2.md"></section>
+    <section data-format="markdown" data-include-format="text" data-include="chapter-3.md"></section>
+    <section data-format="markdown" data-include-format="text" data-include="chapter-4.md"></section>
+    <section data-format="markdown" data-include-format="text" data-include="chapter-5.md"></section>
+    <section data-format="markdown" data-include-format="text" data-include="chapter-6.md"></section>
   </body>
 </html></html>
