Fixed publish date

--- a/20181107/index.html
+++ b/20181107/index.html
@@ -21,6 +21,7 @@
         processVersion: 2018,
         edDraftURI: "http://bp4mc2.org/draft",
         shortName: "bp4mc2",
+        publishDate: "2018-11-07",
         previousPublishDate: "2014-06-18",
         previousMaturity: "REC"
       };
