--- a/profiles/index.html
+++ b/profiles/index.html
@@ -17,7 +17,7 @@
           url: "http://www.architolk.nl"
         }],
         processVersion: 2018,
-        edDraftURI: "http://bp4mc2.org/model",
+        edDraftURI: "http://bp4mc2.org/profiles",
         shortName: "bp4mc2"
       };
     </script>
