--- a/profiles/en/index.html
+++ b/profiles/en/index.html
@@ -5,7 +5,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Nederlands profiel voor gegevenscatalogi</title>
-    <script src="https://www.w3.org/Tools/respec/respec-w3c-common" async="async" class="remove"></script>
+  <script src="../respec-bp4mc2.js" async="async" class="remove"></script>
     <script class="remove">
       var respecConfig = {
         specStatus: "ED",
@@ -17,7 +17,7 @@
           url: "http://www.architolk.nl"
         }],
         processVersion: 2018,
-        edDraftURI: "http://bp4mc2.org/model",
+        edDraftURI: "http://bp4mc2.org/profiles",
         shortName: "bp4mc2"
       };
     </script>
