Added notification banner

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
 <h1><img class="logo" src="bp4mc2.png" alt="bp4mc2"/>Best Practices for meaningful connected computing</h1>
 <h2>PiLOD praktijkervaringen - betekenisvol verbinden van informatie</h2>
+<div style="border: solid black 1px; padding: 0.5em; background: #FFB;">
+	<p style="margin-top: 0; font-weight: bold;">Nieuwe werkversie beschikbaar (Update van 7 november 2018)</p>
+	<p style="margin-bottom: 0;">Een nieuwe versie van dit document is beschikbaar zie: <a href="http://bp4mc2.org/20181107">Versie van 2018-11-07</a>. Dit betreft een geactualiseerde versie, waarbij de ervaringen en kennis over BP4mc2 is verwerkt die verzameld is tussen 2014 en 2018.</p>
+</div>
 <dl>
 	<dt>Deze versie:</dt>
 	<dd>
