Added 'doe mee' part

--- a/20181107/index.html
+++ b/20181107/index.html
@@ -18,6 +18,10 @@
           name: "Marco Brattinga",
           url: "http://www.architolk.nl"
         }],
+        github: {
+          repoURL: "https://github.com/bp4mc2/bp4mc2/",
+          branch: "master"
+        },
         processVersion: 2018,
         edDraftURI: "http://bp4mc2.org/draft",
         shortName: "bp4mc2",
