Added visualisation with webcomponent

--- a/def/archimate.html
+++ b/def/archimate.html
@@ -1,5 +1,23 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <p>Archimate ontology, available as turtle file via: <a href="http://bp4mc2.org/def/archimate.ttl">http://bp4mc2.org/def/archimate.ttl</a></p>
-  </body>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <title>Archimate ontology</title>
+  <style>
+    .mb-0 {
+      margin-bottom: 0px;
+    }
+  </style>
+</head>
+<body>
+  <main class="container">
+    <div id="root">
+      <vocabularyAppearance
+          endpoint="http://bp4mc2.org/def/archimate.ttl"
+          ontologyIRI="http://bp4mc2.org/def/archimate"
+      />
+    <div>
+  </main>
+<script type="text/javascript" src="webcomponents.js"></script></body>
 </html>
