--- a/def/archimate.html
+++ b/def/archimate.html
@@ -19,5 +19,5 @@
       />
     <div>
   </main>
-<script type="text/javascript" src="webcomponents.js"></script></body>
+<script type="text/javascript" src="js/webcomponents.js"></script></body>
 </html>
