--- a/def/archimate.html
+++ b/def/archimate.html
@@ -14,7 +14,7 @@
   <main class="container">
     <div id="root">
       <vocabularyAppearance
-          endpoint="http://bp4mc2.org/def/archimate.ttl"
+          endpoint="http://bp4mc2.org/def/archimate.json"
           ontologyIRI="http://bp4mc2.org/def/archimate"
       />
     <div>
