--- a/def/archimate.html
+++ b/def/archimate.html
@@ -13,6 +13,7 @@
 </head>
 <body>
   <main class="container">
+    <p>Downloads: <a href="http://bp4mc2.org/def/archimate.ttl">archimate.ttl</a></p>
     <div id="root">
       <vocabularyAppearance
           endpoint="http://bp4mc2.org/def/archimate.json"
