--- a/def/archimate.html
+++ b/def/archimate.html
@@ -13,10 +13,10 @@
 </head>
 <body>
   <main class="container">
-    <p>Downloads: <a href="http://bp4mc2.org/def/archimate.ttl">archimate.ttl</a></p>
+    <p>Downloads: <a href="https://bp4mc2.org/def/archimate.ttl">archimate.ttl</a></p>
     <div id="root">
       <vocabularyAppearance
-          endpoint="http://bp4mc2.org/def/archimate.json"
+          endpoint="https://bp4mc2.org/def/archimate.json"
           ontologyIRI="http://bp4mc2.org/def/archimate"
       />
     <div>
