--- a/nentest/index.html
+++ b/nentest/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico' />
+  <!--<link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico' />-->
   <link rel="stylesheet" type="text/css" href="localstyle.css" />
   <title>NEN 3610 Linked Data Profiel</title>
   <script class="remove" src="config.js"></script>
-  <script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js'></script>
+  <!--<script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js'></script>-->
 </head>
 
 <body>
