Test - added js

--- a/nentest/index.html
+++ b/nentest/index.html
@@ -9,6 +9,7 @@
   <title>NEN 3610 Linked Data Profiel</title>
   <script class="remove" src="config.js"></script>
   <!--<script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js'></script>-->
+  <script class='remove' src='respec-geonovum.js'></script>
 </head>
 
 <body>
