Update from generated files

--- a/zorgeloosvastgoed/index.html
+++ b/zorgeloosvastgoed/index.html
@@ -1,5 +1,40 @@
-<html>
-<body>
-  <p>Hier komt het developersportaal voor zorgeloosvastgoed</p>
-</body>
+<!DOCTYPE HTML>
+<html lang="nl"><html lang="nl">
+<head>
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Nederlands profiel voor gegevenscatalogi</title>
+    <script src="respec-bp4mc2.js" async="async" class="remove"></script>
+    <script class="remove">
+      var respecConfig = {
+        specStatus: "ED",
+        editors: [{
+          name: "Arjen Santema",
+          url: "http://www.kadaster.nl",
+        },{
+          name: "Marco Brattinga",
+          url: "http://www.architolk.nl"
+        }],
+        github: {
+          repoURL: "https://github.com/bp4mc2/bp4mc2/",
+          branch: "master"
+        },
+        processVersion: 2018,
+        edDraftURI: "http://bp4mc2.org/profiles",
+        shortName: "bp4mc2"
+      };
+    </script>
+</head>
+  <body>
+    <section id="abstract">
+      <p>
+        Dit document beschrijft de best-practice voor een Nederlands profiel voor gegevenscatalogi
+      </p>
+    </section>
+    <section data-format="markdown" data-include="topmodel-zv.md"></section>
+    <section data-format="markdown" data-include="skos-ap-zv.md"></section>
+    <section data-format="markdown" data-include="frbr-ap-zv.md"></section>
+    <section data-format="markdown" data-include="skoslex-ap-zv.md"></section>
+  </body>
 </html>
