Update samenvatting hoofdpagina

--- a/zorgeloosvastgoed/index.html
+++ b/zorgeloosvastgoed/index.html
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Nederlands profiel voor gegevenscatalogi</title>
+  <title>Zorgeloosvastgoed gegevenscatalogus profiel</title>
     <script src="respec-bp4mc2.js" async="async" class="remove"></script>
     <script class="remove">
       var respecConfig = {
@@ -17,19 +17,19 @@
           url: "http://www.architolk.nl"
         }],
         github: {
-          repoURL: "https://github.com/bp4mc2/bp4mc2/",
+          repoURL: "https://github.com/bp4mc2/bp4mc2-zvg/",
           branch: "master"
         },
-        processVersion: 2018,
-        edDraftURI: "http://bp4mc2.org/profiles",
-        shortName: "bp4mc2"
+        processVersion: 2020,
+        edDraftURI: "http://bp4mc2.org/zorgeloosvastgoed/",
+        shortName: "bp4mc2-zvg"
       };
     </script>
 </head>
   <body>
     <section id="abstract">
       <p>
-        Dit document beschrijft de best-practice voor een Nederlands profiel voor gegevenscatalogi
+        Dit document beschrijft het profiel voor de gegevenscatalogus van zorgeloosvastgoed
       </p>
     </section>
     <section data-format="markdown" data-include="topmodel-zv.md"></section>
