--- a/zorgeloosvastgoed/index.html
+++ b/zorgeloosvastgoed/index.html
@@ -16,6 +16,9 @@
           name: "Marco Brattinga",
           url: "http://www.architolk.nl"
         }],
+        authors: [{
+          name: "Test"
+        }],
         github: {
           repoURL: "https://github.com/bp4mc2/bp4mc2-zvg/",
           branch: "master"
