--- a/zorgeloosvastgoed/index.html
+++ b/zorgeloosvastgoed/index.html
@@ -9,15 +9,22 @@
     <script class="remove">
       var respecConfig = {
         specStatus: "ED",
-        editors: [{
+        authors: [{
           name: "Arjen Santema",
           url: "http://www.kadaster.nl",
         },{
           name: "Marco Brattinga",
           url: "http://www.architolk.nl"
-        }],
-        authors: [{
-          name: "Test"
+        },{
+          name: "Steve Bertens"
+        }, {
+          name: "Damir Hubanic"
+        }, {
+          name: "Dennis Houtman"
+        }, {
+          name: "Niels de Winne"
+        }, {
+          name: "Ronald Carpentier"
         }],
         github: {
           repoURL: "https://github.com/bp4mc2/bp4mc2-zvg/",
