Van auteur naar redacteur

--- a/zorgeloosvastgoed/index.html
+++ b/zorgeloosvastgoed/index.html
@@ -9,7 +9,7 @@
     <script class="remove">
       var respecConfig = {
         specStatus: "ED",
-        authors: [{
+        editors: [{
           name: "Arjen Santema",
           url: "http://www.kadaster.nl",
         },{
