--- a/mim-respec/index.html
+++ b/mim-respec/index.html
@@ -19,7 +19,7 @@
 1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890
 --------------------------------------------------------------------------------------------------->
         <!-- Invullen: de titel van de standaard of het document ---------------------------------->
-        <title>MIM - Metamodel Informatie Modellering</title>
+        <title>MIM Ontologie voor informatiemodelleren</title>
 
         <!-- Invullen: de naam van de lokale CSS file --------------------------------------------->
         <link rel="stylesheet" type="text/css" href="./media/style.css">
