Kleine update fix voor respec

--- a/metamodel/index.html
+++ b/metamodel/index.html
@@ -9,7 +9,7 @@
     <script class="remove">
       var respecConfig = {
         specStatus: "ED",
-        authors: [{
+        editors: [{
           name: "Marco Brattinga",
           url: "http://www.architolk.nl"
         }],
@@ -24,6 +24,11 @@
     </script>
 </head>
   <body>
+    <section id="abstract">
+      <p>
+        Dit document geeft een modelleerwijze voor gegevenstypering. Vanuit een inzicht dat typering van gegevens vooral gaat over het doorgronden van de betekenis die deze gegevens in de maatschappij krijgen.
+      </p>
+    </section>
     <section data-format="markdown" data-include="metamodel.md"></section>
   </body>
 </html>
