Opgedeeld in secties

--- a/metamodel/index.html
+++ b/metamodel/index.html
@@ -29,6 +29,11 @@
         Dit document geeft een modelleerwijze voor gegevenstypering. Vanuit een inzicht dat typering van gegevens vooral gaat over het doorgronden van de betekenis die deze gegevens in de maatschappij krijgen.
       </p>
     </section>
-    <section data-format="markdown" data-include="metamodel.md"></section>
+    <section data-format="markdown" data-include="inleiding.md"></section>
+    <section data-format="markdown" data-include="beschouwingsdomein.md"></section>
+    <section data-format="markdown" data-include="verwerkingsdomein.md"></section>
+    <section data-format="markdown" data-include="objecttypering.md"></section>
+    <section data-format="markdown" data-include="gegevenstypering.md"></section>
+    <section data-format="markdown" data-include="model.md"></section>
   </body>
 </html>
