--- a/metamodel/index.html
+++ b/metamodel/index.html
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Metamodel</title>
+  <title>Metamodel gegevenstypering</title>
     <script src="respec-bp4mc2.js" async="async" class="remove"></script>
     <script class="remove">
       var respecConfig = {
