--- a/praktijkopdracht/index.html
+++ b/praktijkopdracht/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
   <head>
     <meta charset="utf-8" />
-    <title>Modellen DPIA</title>
+    <title>Modellen Praktijkopdracht</title>
     <script
       src="https://www.w3.org/Tools/respec/respec-w3c"
       class="remove"
