--- a/praktijkopdracht/index.html
+++ b/praktijkopdracht/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
   <head>
     <meta charset="utf-8" />
-    <title>Modellen Praktijkopdracht</title>
+    <title>Model Nieuw wetboek van Strafvordering</title>
     <script
       src="https://www.w3.org/Tools/respec/respec-w3c"
       class="remove"
@@ -16,7 +16,7 @@
         localBiblio: localBiblio,
         specStatus: "base",
         shortName: "dpia",
-        subtitle: "concept 0.5.0",
+        subtitle: "resultaat praktijkopdracht",
         publishDate: "2025-03-13",
         postProcess: [markupDefTables],
         latestVersion: "https://modellen.jenvgegevens.nl/praktijkopdracht",
