--- a/praktijkopdracht/index.html
+++ b/praktijkopdracht/index.html
@@ -17,11 +17,11 @@
         specStatus: "base",
         shortName: "dpia",
         subtitle: "resultaat praktijkopdracht",
-        publishDate: "2025-03-13",
+        publishDate: "2025-03-14",
         postProcess: [markupDefTables],
         latestVersion: "https://modellen.jenvgegevens.nl/praktijkopdracht",
-        authors: [{ name: "CDO Office"}],
-        editors: [
+        editors: [{ name: "CDO Office"}],
+        authors: [
           {
             name:       "Trainees",
             company:    "Ministerie van Justitie en Veiligheid",
