--- a/praktijkopdracht-2025/index.html
+++ b/praktijkopdracht-2025/index.html
@@ -40,5 +40,6 @@
     <section data-include-format="markdown" data-include="G04-Begrippenkader.md"></section>
     <section data-include-format="markdown" data-include="G03-Begrippenkader.md"></section>
     <section data-include-format="markdown" data-include="G01-Begrippenkader.md"></section>
+    <section data-include-format="markdown" data-include="controle.md"></section>
   </body>
 </html>
